--- a/index.html
+++ b/index.html
@@ -4,12 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site_Curso</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <header class="menu-pincipal">
-        <div class="logo">
+    <header class="main-menu">
+        <main>
+            <div class="header-1">
+                <div class="logo">
+                    <img src="./img/logo.png"/>
+                </div>
+                <div class="social-networks">
+                    <ul>
+                        <li><a href=""><img src="./img/rss.png"></a></li>
 
-        </div>
+                        <li><a href=""><img src="./img/facebook.png"></a></li>
+
+                        <li><a href=""><img src="./img/twitter.png"></a></li>
+
+                        <li><a href=""><img src="./img/linkedin.png"></a></li>              
+                    </ul>
+                </div>
+            </div>
+        </main>
     </header>
 </body>
 </html> 
